# 2048

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/2048/: game2048.hpp
include/2048/game/: board.h  board.hpp  keyboardInput.h  keyboardInput.hpp  random.h  scoreStorage.hpp  stringToInt.hpp
include/2048/input/: inputAction.hpp  keyboard.hpp  mouse.hpp
include/2048/ui/: assets.hpp  boardRenderer.hpp  button.hpp  buttons.hpp  cursorManager.hpp  element.hpp  windowManager.hpp
include/2048/ui/screens/: abstract.hpp  base.hpp  game.hpp  menu.hpp
resources/: 2048.icns  icon.rc
src/: game2048.cpp  main.cpp
src/game/: board.cpp  board.h  keyboardInput.cpp  random.cpp  random.h  scoreStorage.cpp  stringToInt.cpp
src/input/: keyboard.cpp  mouse.cpp
src/ui/: assets.cpp  boardRenderer.cpp  button.cpp  buttons.cpp  cursorManager.cpp  element.cpp  windowManager.cpp
src/ui/screens/: base.cpp  game.cpp  menu.cpp
